fix: comment card width too large

--- a/resources/css/components/comment/_comment.scss
+++ b/resources/css/components/comment/_comment.scss
@@ -2,6 +2,7 @@
 //================
 .comment {
     width: 100%;
+    box-sizing: border-box;
 
     box-shadow: 1px 2px 5px 2px rgba(0, 0, 0, .2);
 
